# cfn-guard-test

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  LICENSE.txt  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  auto_assign-issues.yml  dependabot.yml  release-drafter.yml  semantic.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: auto-merge.yml  ci.yml  dependabot.yml  release-drafter.yml  release.yml
cfn_guard_test/: __init__.py  case.py  cfn_guard_reader.py  cfn_guard_runner.py  reader.py  report.py  rule.py  rule_result.py  runner.py  suite.py  suites.py  test_case.py  test_suite.py
tests/: conftest.py  test_command.py  test_custom_set.py
tests/payloads/: 2_passing_rules.txt  2_passing_rules.xml  2passing_rules.txt  empty.xml  failed_rule.txt  failed_rule_older_version.txt  failed_rule_older_version.xml  invalid_case_name.txt  invalid_case_name.xml  invalid_case_number.txt  invalid_case_number.xml  invalid_case_number_and_name.txt  invalid_case_number_and_name.xml  non_compatible_rule.txt  non_compatible_rule.xml  passing_rule.txt  passing_rule.xml  passing_rule_older_version.txt  skipped_rule.txt  skipped_rule.xml
