[tool.poetry]
name = "cfn-guard-test"
version = "0.7.0"
description = "cfn-guard-test is a wrapper for cfn-guard that allows you to run unit tests for your cfn-guard rules."
authors = ["Joris Conijn <joris@conijnonline.nl>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
junit-xml = "^1.9"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
black = "^23.3"
mypy = "^1.3"
pytest = "^7.3.2"
pytest-cov = "^4.1.0"
pytest-mypy = "^0.10.3"
toml = "^0.10.2"
types-toml = "^0.10.8"
xenon = "^0.9.0"
radon = "^5.1.0"
python-semantic-release = "^7.34.4"

[tool.poetry.scripts]
cfn-guard-test = "cfn_guard_test:main"

[tool.semantic_release]
version_variable = [
    "cfn_guard_test/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install poetry && poetry build"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
