[tool.poetry]
name = "cfn-guard-test"
version = "0.8.3"
description = "cfn-guard-test is a wrapper for cfn-guard that allows you to run unit tests for your cfn-guard rules."
authors = ["Joris Conijn <joris@conijnonline.nl>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
junit-xml = "^1.9"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
black = "^24.1"
mypy = "^1.8"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-mypy = "^0.10.3"
toml = "^0.10.2"
types-toml = "^0.10.8"
xenon = "^0.9.1"
radon = "^6.0.1"
python-semantic-release = "^8.7.0"

[tool.poetry.scripts]
cfn-guard-test = "cfn_guard_test:main"

[tool.semantic_release]
version_variable = [
    "cfn_guard_test/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install poetry && poetry build"

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags =["fix", "perf", "chore(deps)"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
